[gd_scene load_steps=19 format=3 uid="uid://mhkxuhqxcccb"]

[ext_resource type="Theme" uid="uid://cu2c5rnghr6e2" path="res://art/theme/new_theme.tres" id="1_dc71h"]
[ext_resource type="PackedScene" uid="uid://ctokxdn2n7lc0" path="res://preparation/action_equip_menu/ActionEquipOption.tscn" id="2_ob603"]
[ext_resource type="Script" path="res://preparation/action_equip_menu/ActionEquipMenu.gd" id="2_wjc05"]
[ext_resource type="PackedScene" uid="uid://b4lk70r2fvrfs" path="res://combat/hud/input/InputDisplay.tscn" id="3_xbjpp"]
[ext_resource type="Script" path="res://combat/action/examples/player/Action_PlayerAttack.gd" id="4_81trp"]
[ext_resource type="Script" path="res://combat/action/examples/player/Action_PlayerPowerAttack.gd" id="5_uf1we"]
[ext_resource type="Script" path="res://combat/action/examples/player/Action_PlayerMoveForward.gd" id="6_kuoha"]
[ext_resource type="Script" path="res://combat/action/examples/player/Action_PlayerMoveRight.gd" id="7_3vrut"]
[ext_resource type="Script" path="res://combat/action/examples/player/Action_PlayerMoveBackward.gd" id="8_o8vix"]
[ext_resource type="Script" path="res://combat/action/examples/player/Action_PlayerMoveLeft.gd" id="9_8vlsm"]
[ext_resource type="PackedScene" uid="uid://chlpm4w3tgmq4" path="res://preparation/action_equip_menu/BindActionPopup.tscn" id="11_blday"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cwmvm"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Resource" id="Resource_s4ji4"]
script = ExtResource("4_81trp")

[sub_resource type="Resource" id="Resource_0x15n"]
script = ExtResource("5_uf1we")

[sub_resource type="Resource" id="Resource_soyjj"]
script = ExtResource("6_kuoha")

[sub_resource type="Resource" id="Resource_ig0d0"]
script = ExtResource("7_3vrut")

[sub_resource type="Resource" id="Resource_g0r8c"]
script = ExtResource("8_o8vix")

[sub_resource type="Resource" id="Resource_xlqov"]
script = ExtResource("9_8vlsm")

[node name="ActionEquipMenu" type="ColorRect"]
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dc71h")
color = Color(0, 0, 0, 1)
script = ExtResource("2_wjc05")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -126.0
offset_right = 126.0
offset_bottom = 168.0
grow_horizontal = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 10

[node name="Label" type="Label" parent="MarginContainer/ColorRect/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Loadout"
horizontal_alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/ColorRect/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_cwmvm")

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ColorRect/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/ColorRect/VBoxContainer/PanelContainer/MarginContainer"]
custom_minimum_size = Vector2(750, 265)
layout_mode = 2
follow_focus = true
scroll_vertical_custom_step = 220.0
horizontal_scroll_mode = 0
vertical_scroll_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/ColorRect/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="GridContainer" type="GridContainer" parent="MarginContainer/ColorRect/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 0
focus_neighbor_bottom = NodePath("../../../../../../FinishedButton")
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 10
columns = 5

[node name="ActionEquipOption" parent="MarginContainer/ColorRect/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("2_ob603")]
layout_mode = 2
action = SubResource("Resource_s4ji4")

[node name="ActionEquipOption2" parent="MarginContainer/ColorRect/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("2_ob603")]
layout_mode = 2
action = SubResource("Resource_0x15n")

[node name="ActionEquipOption3" parent="MarginContainer/ColorRect/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("2_ob603")]
layout_mode = 2
action = SubResource("Resource_soyjj")

[node name="ActionEquipOption4" parent="MarginContainer/ColorRect/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("2_ob603")]
layout_mode = 2
action = SubResource("Resource_ig0d0")

[node name="ActionEquipOption5" parent="MarginContainer/ColorRect/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("2_ob603")]
layout_mode = 2
action = SubResource("Resource_g0r8c")

[node name="ActionEquipOption6" parent="MarginContainer/ColorRect/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("2_ob603")]
layout_mode = 2
action = SubResource("Resource_xlqov")

[node name="ActionEquipOption7" parent="MarginContainer/ColorRect/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("2_ob603")]
layout_mode = 2

[node name="ActionEquipOption8" parent="MarginContainer/ColorRect/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("2_ob603")]
layout_mode = 2

[node name="ActionEquipOption9" parent="MarginContainer/ColorRect/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("2_ob603")]
layout_mode = 2

[node name="ActionEquipOption10" parent="MarginContainer/ColorRect/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("2_ob603")]
layout_mode = 2

[node name="ActionEquipOption11" parent="MarginContainer/ColorRect/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("2_ob603")]
layout_mode = 2

[node name="ActionEquipOption12" parent="MarginContainer/ColorRect/VBoxContainer/PanelContainer/MarginContainer/ScrollContainer/MarginContainer/GridContainer" instance=ExtResource("2_ob603")]
layout_mode = 2

[node name="InputDisplay" parent="MarginContainer/ColorRect" instance=ExtResource("3_xbjpp")]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.85
anchor_bottom = 0.85
grow_vertical = 0

[node name="FinishedButton" type="Button" parent="MarginContainer/ColorRect"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4
anchor_top = 0.8
anchor_right = 0.6
anchor_bottom = 0.8
grow_horizontal = 2
theme_override_font_sizes/font_size = 48
text = "Done"

[node name="BindActionPopup" parent="." instance=ExtResource("11_blday")]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/ColorRect/FinishedButton" to="." method="_on_finished_button_pressed"]
